// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoDataCard props button 1`] = `
.emotion-0 {
  max-width: 400px;
}

<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned emotion-0"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Button
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoDataCard props extends EuiCardProps 1`] = `
.emotion-0 {
  max-width: 400px;
}

<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned custom_class emotion-0"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Button
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoDataCard props href 1`] = `
.emotion-0 {
  max-width: 400px;
}

<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--isClickable euiCard euiCard--centerAligned euiCard--isClickable emotion-0"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      <a
        aria-describedby="generated-idDescription"
        class="euiCard__titleAnchor"
        href="#"
        rel="noreferrer"
      >
        Card title
      </a>
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Button
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoDataCard props isDisabled 1`] = `
.emotion-0 {
  max-width: 400px;
}

<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiCard euiCard--centerAligned euiCard-isDisabled emotion-0"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      <button
        aria-describedby=" generated-idDescription"
        class="euiCard__titleButton"
        disabled=""
      >
        Card title
      </button>
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
</div>
`;

exports[`NoDataCard props recommended 1`] = `
.emotion-0 {
  max-width: 400px;
}

<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--hasBetaBadge emotion-0"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <span
    class="euiCard__betaBadgeWrapper"
  >
    <span
      class="euiBetaBadge euiBetaBadge--hollow euiCard__betaBadge"
      id="generated-idBetaBadge"
      title="Recommended"
    >
      Recommended
    </span>
  </span>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Card title
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoDataCard renders 1`] = `
.emotion-0 {
  max-width: 400px;
}

<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned emotion-0"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Card title
        </span>
      </span>
    </button>
  </div>
</div>
`;
